@@ -3,6 +3,8 @@ update-manager (1:0.126.3) UNRELEASEDkarmic; urgency=low
   * UpdateManager/UpdateManager.py:
     - refresh "last updated" text periodically to ensure its
       not stale (LP: #450286)
+  * DistUpgrade/DistUpgradeViewGtk.py:
+    - deal with io errors when writing the log (LP: #447693)
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 13 Oct 2009 15:47:50 +0200
 
